# agents

./: .dockerignore  .gitignore  Dockerfile  README.md  heroku.yml  pyproject.toml  render.yaml
configs/: rag_langchain.json  sentiment_keyword.json  sentiment_mcp.json  sentiment_sklearn.json
data/: rag_corpus.jsonl  rag_eval.jsonl  sentiment_eval.jsonl  sentiment_train.jsonl
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  theme.ts
frontend/src/components/: ConfigSelector.tsx  MetricsCards.tsx  PredictionTable.tsx  RunDetail.tsx  RunList.tsx
scripts/: train_sentiment_model.py
src/eval_agent/: __init__.py  cli.py  config.py  registry.py  runner.py  types.py
src/eval_agent/api/: __init__.py  app.py  schemas.py  storage.py
src/eval_agent/datasets/: base.py  jsonl.py  jsonl_rag.py
src/eval_agent/metrics/: base.py  classification.py  generation.py
src/eval_agent/models/: __init__.py  base.py  keyword.py  langchain_rag.py  mcp.py  sklearn.py
src/eval_agent/tasks/: base.py  classification.py  retrieval.py
tests/: conftest.py  test_evaluation_agent.py  test_mcp_adapter.py
