[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evaluation-agent"
version = "0.1.0"
description = "Automation agent for evaluating AI models."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AI Assistant" }]
dependencies = [
    "aiofiles>=23.1",
    "fastapi>=0.103.0",
    "uvicorn>=0.23.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",

    "mcp>=1.14.0",
    "httpx-sse>=0.4.1",
=======
    "langchain>=0.1.16",
    "langchain-community>=0.0.33",
    "faiss-cpu>=1.7.4",
]

[project.scripts]
evaluation-agent = "eval_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
